# B3AssetMonitoringAPI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
api/: __init__.py  main.py
api/modules/database/: __init__.py
api/modules/email/: __init__.py
api/modules/middleware/: __init__.py
api/modules/queue/: __init__.py
api/modules/util/: __init__.py
api/services/b3/: __init__.py
api/services/b3/model/: __init__.py
api/services/b3/repository/: __init__.py
api/services/b3/util/: __init__.py
api/services/user/: __init__.py
api/services/user/model/: __init__.py
api/services/user/repository/: __init__.py
api/services/user/util/: __init__.py
docker/api/: Dockerfile
docker/redis/: Dockerfile
docker/supervisor/: service_script.conf
test/mocks/assets/: __init__.py
test/modules/database/: test_connection.py
test/modules/email/: test_email.py
test/services/b3/: test_b3_service.py
test/services/b3/repository/: test_b3_repository.py
test/services/b3/util/: test_b3_util.py
test/services/user/: test_user_service.py
test/services/user/repository/: test_user_repository.py
test/util/: __init__.py
